allow cross origin requests for dashboards like tasseo

--- a/templates/virtualhost.conf
+++ b/templates/virtualhost.conf
@@ -3,7 +3,11 @@
   DocumentRoot <%= docroot %>
   ErrorLog <%= logroot %>/<%= name %>_error.log
   CustomLog <%= logroot %>/<%= name %>_access.log combined
+
   <Location "/">
+    Header set Access-Control-Allow-Origin "*"
+    Header set Access-Control-Allow-Methods "GET, OPTIONS"
+    Header set Access-Control-Allow-Headers "origin, authorization, accept"
     SetHandler python-program
     PythonPath "['<%= docroot %>'] + sys.path"
     PythonHandler django.core.handlers.modpython
