--- a/.travis.yml
+++ b/.travis.yml
@@ -9,3 +9,6 @@ env:
   - PUPPET_VERSION=2.7.18
   - PUPPET_VERSION=3.0.1
   - PUPPET_VERSION=3.1.0
+matrix:
+  allow_failures:
+    - env: PUPPET_VERSION=3.0.1
