--- a/files/storage-schemas.conf
+++ b/files/storage-schemas.conf
@@ -1,14 +1,7 @@
-[stats]
-priority = 100
-pattern = .*
-retentions = 10:2160,60:10080,600:262974
+[carbon]
+pattern = ^carbon\..*
+retentions = 1m:31d,10m:1y,1h:5y
 
-[stats_counts]
-priority = 100
+[default]
 pattern = .*
-retentions = 10:2160,60:10080,600:262974
-
-[statsd]
-priority = 100
-pattern = .*
-retentions = 10:2160,60:10080,600:262974
+retentions = 10s:8d,1m:31d,10m:1y,1h:5y
