--- a/templates/graphite-web.conf
+++ b/templates/graphite-web.conf
@@ -7,6 +7,7 @@ stop on runlevel [!2345]
 
 respawn
 
+env PYTHONPATH=/opt/graphite/webapp/
 env GRAPHITE_STORAGE_DIR=/opt/graphite/storage/
 env GRAPHITE_CONF_DIR=/opt/graphite/conf/
 exec /opt/graphite/bin/gunicorn_django -b127.0.0.1:<%= @port %> -w2 graphite.settings
