--- a/templates/upstart/carbon-cache.conf
+++ b/templates/upstart/carbon-cache.conf
@@ -6,11 +6,10 @@ start on (net-device-up
 stop on runlevel [!2345]
 
 respawn
-expect daemon
 
 pre-start exec rm -f '<%= @root_dir %>'/storage/carbon-cache.pid
 
 chdir '<%= @root_dir %>'
 env GRAPHITE_STORAGE_DIR='<%= @root_dir %>/storage'
 env GRAPHITE_CONF_DIR='<%= @root_dir %>/conf'
-exec python '<%= @root_dir %>/bin/carbon-cache.py' start
+exec python '<%= @root_dir %>/bin/carbon-cache.py' --debug start
