Add tests for virtualenv changes
New fixture. Changed paths. No longer testing every package in `::deps`,
since it's a bit pointless.

--- a/.fixtures.yml
+++ b/.fixtures.yml
@@ -1,5 +1,6 @@
 fixtures:
   repositories:
     stdlib: git://github.com/puppetlabs/puppetlabs-stdlib.git
+    python: git://github.com/stankevich/puppet-python.git
   symlinks:
     graphite: "#{source_dir}"
