--- a/templates/upstart/carbon-aggregator.conf
+++ b/templates/upstart/carbon-aggregator.conf
@@ -10,7 +10,7 @@ respawn
 chdir '<%= @root_dir %>'
 env GRAPHITE_STORAGE_DIR='<%= @root_dir %>/storage'
 env GRAPHITE_CONF_DIR='<%= @root_dir %>/conf'
-exec python '<%= @root_dir %>/bin/carbon-aggregator.py' \
+exec <%= @root_dir %>/bin/carbon-aggregator.py \
 <% if @aggregation_rules_ensure == 'present' -%>
     --rules='<%= @root_dir %>/conf/aggregation-rules.conf' \
 <% end -%>
