Force carbon-aggregator to run in foreground
This is the same dirty hack applied to carbon-cache in #13. Otherwise the
following happens, and variations of `expect` cause it to hang :(

```
root@graphite-1:~# start carbon-aggregator
carbon-aggregator start/running, process 23813
root@graphite-1:~# status carbon-aggregator
carbon-aggregator stop/waiting
root@graphite-1:~# cat /var/log/upstart/carbon-aggregator.log
Starting carbon-aggregator (instance a)
carbon-aggregator (instance a) is already running with pid 23491
carbon-aggregator (instance a) is already running with pid 23491
carbon-aggregator (instance a) is already running with pid 23491
carbon-aggregator (instance a) is already running with pid 23491
carbon-aggregator (instance a) is already running with pid 23491
carbon-aggregator (instance a) is already running with pid 23491
carbon-aggregator (instance a) is already running with pid 23491
carbon-aggregator (instance a) is already running with pid 23491
carbon-aggregator (instance a) is already running with pid 23491
carbon-aggregator (instance a) is already running with pid 23491
```

--- a/templates/upstart/carbon-aggregator.conf
+++ b/templates/upstart/carbon-aggregator.conf
@@ -14,4 +14,4 @@ exec python '<%= @root_dir %>/bin/carbon-aggregator.py' \
 <% if @aggregation_rules_ensure == 'present' -%>
     --rules='<%= @root_dir %>/conf/aggregation-rules.conf' \
 <% end -%>
-    start
+    --debug start
