Support running graphite svc as any user
Added parameters to select what user carbon cache and graphite run as.

Yasser

--- a/templates/upstart/carbon-aggregator.conf
+++ b/templates/upstart/carbon-aggregator.conf
@@ -5,6 +5,9 @@ start on (net-device-up
           and runlevel [2345])
 stop on runlevel [!2345]
 
+setuid <%= scope['::graphite::user'] %>
+setgid <%= scope['::graphite::group'] %>
+
 respawn
 
 chdir '<%= @root_dir %>'
