Manual merge of GDS Verify changes to GDS Ops
GDS Verify use a fork of the graphite module. It would be beter of to
use the GDS Operations puppet module and this commit is the first
attempt to add the specific features used in the GDS Verify module.

The features namely are:
 - Ability to specify the user used to run the processes
 - Install from Debian package

To manage user/group permission this commit uses Exec instead of
File resource, simply because the graphite directory can grow very large,
and managing large directories with Puppet can lead to memory starvation.
The exec will use xargs and parralise chmod, so even for large directories
it should run pretty quickly.

--- a/templates/upstart/graphite-web.conf
+++ b/templates/upstart/graphite-web.conf
@@ -1,14 +1,18 @@
 description "Graphite realtime graphing engine"
 
+<%- gunicorn_bin = scope['::graphite::use_python_pip'] ? "#{@root_dir}/bin/gunicorn_django" : "gunicorn_django" -%>
+
 start on (net-device-up
           and local-filesystems
           and runlevel [2345])
 stop on runlevel [!2345]
 
+setuid <%= scope['::graphite::user'] %>
+setgid <%= scope['::graphite::group'] %>
 respawn
 
 chdir '<%= @root_dir %>/webapp'
 env PYTHONPATH='<%= @root_dir %>/webapp'
 env GRAPHITE_STORAGE_DIR='<%= @root_dir %>/storage'
 env GRAPHITE_CONF_DIR='<%= @root_dir %>/conf'
-exec <%= @root_dir %>/bin/gunicorn_django -b<%= @bind_address -%>:<%= @port %> -w2 graphite/settings.py
+exec <%= gunicorn_bin %> -b<%= @bind_address -%>:<%= @port %> -w2 graphite/settings.py
