Simplify out of scope var lookups for config.pp
Lookup out of scope vars in config.pp rather than in the template for
user and group. This simplifies support for multiple versions of Puppet,
making the variable lookup local in the template.

--- a/templates/upstart/graphite-web.conf
+++ b/templates/upstart/graphite-web.conf
@@ -1,14 +1,14 @@
 description "Graphite realtime graphing engine"
 
-<%- gunicorn_bin = scope['::graphite::use_python_pip'] ? "#{@root_dir}/bin/gunicorn_django" : "gunicorn_django" -%>
+<%- gunicorn_bin = scope.lookupvar('::graphite::use_python_pip') ? "#{@root_dir}/bin/gunicorn_django" : "gunicorn_django" -%>
 
 start on (net-device-up
           and local-filesystems
           and runlevel [2345])
 stop on runlevel [!2345]
 
-setuid <%= scope['::graphite::user'] %>
-setgid <%= scope['::graphite::group'] %>
+setuid <%= @user %>
+setgid <%= @group %>
 respawn
 
 chdir '<%= @root_dir %>/webapp'
