--- a/templates/upstart/carbon-aggregator.conf
+++ b/templates/upstart/carbon-aggregator.conf
@@ -5,8 +5,8 @@ start on (net-device-up
           and runlevel [2345])
 stop on runlevel [!2345]
 
-setuid <%= scope['::graphite::user'] %>
-setgid <%= scope['::graphite::group'] %>
+setuid <%= @user %>
+setgid <%= @group %>
 
 respawn
 
