--- a/templates/upstart/graphite-web.conf
+++ b/templates/upstart/graphite-web.conf
@@ -1,7 +1,5 @@
 description "Graphite realtime graphing engine"
 
-<%- gunicorn_bin = scope.lookupvar('::graphite::use_python_pip') ? "#{@root_dir}/bin/gunicorn_django" : "gunicorn_django" -%>
-
 start on (net-device-up
           and local-filesystems
           and runlevel [2345])
@@ -15,4 +13,4 @@ chdir '<%= @root_dir %>/webapp'
 env PYTHONPATH='<%= @root_dir %>/webapp'
 env GRAPHITE_STORAGE_DIR='<%= @root_dir %>/storage'
 env GRAPHITE_CONF_DIR='<%= @root_dir %>/conf'
-exec <%= gunicorn_bin %> -b<%= @bind_address -%>:<%= @port %> -w2 graphite/settings.py
+exec <%= @gunicorn_bin %> -b<%= @bind_address -%>:<%= @port %> -w2 graphite/settings.py
