--- a/templates/upstart/graphite-web.conf
+++ b/templates/upstart/graphite-web.conf
@@ -10,7 +10,7 @@ setgid <%= @group %>
 respawn
 
 chdir '<%= @root_dir %>/webapp'
-env PYTHONPATH='<%= @root_dir %>/webapp'
+env PYTHONPATH='<%= @root_dir %>/lib:<%= @root_dir %>/webapp'
 env GRAPHITE_STORAGE_DIR='<%= @root_dir %>/storage'
 env GRAPHITE_CONF_DIR='<%= @root_dir %>/conf'
 exec <%= @gunicorn_bin %> -b<%= @bind_address -%>:<%= @port %> -w2 graphite/settings.py
