Run TravisCI builds in containers
TravisCI now supports containerised builds, per
blog.travis-ci.com/2014-12-17-faster-builds-with-container-based-infrastructure/.

Enable them to take advantage of faster build times and cleaner workspaces.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,6 @@
 ---
+# Run inside a container
+sudo: false
 # Verify this with: http://lint.travis-ci.org/
 language: ruby
 # Delete dependency locks for matrix builds.
