--- a/.travis.yml
+++ b/.travis.yml
@@ -1,27 +1,15 @@
 ---
-# Run inside a container
-sudo: false
-# Verify this with: http://lint.travis-ci.org/
 language: ruby
-# Delete dependency locks for matrix builds.
 before_install: rm Gemfile.lock || true
+bundler_args: --without functional_tests
 script: bundle exec rake test
-rvm:
-  - 1.9.3
-  - 2.0.0
-  - 2.1.0
-  - 2.2.0
-env:
-  matrix:
-  - PUPPET_VERSION="~> 3.8.6"
-  - PUPPET_VERSION="~> 4.3.2"
-# https://tickets.puppetlabs.com/browse/PUP-3796
 matrix:
-  exclude:
-    - rvm: 2.2.0
-      env: PUPPET_VERSION="~> 3.8.6"
-
-# Only notify for failed builds.
-notifications:
-  email:
-    on_success: never
+  fast_finish: true
+  include:
+    - rvm: 1.9.3
+      env: PUPPET_VERSION="~> 3.8.0"
+    - rvm: 2.4.0
+      env: PUPPET_VERSION="~> 5.3.0"
+  allow_failures:
+    - rvm: 2.4.0
+      env: PUPPET_VERSION="~> 5.3.0"
