Make the worker processes for graphite-web configurable
This should be useful when hosting graphite on a machine with more
than two cores, as you should be able to utilise more of the available
cores if desired.

--- a/templates/upstart/graphite-web.conf
+++ b/templates/upstart/graphite-web.conf
@@ -13,4 +13,4 @@ chdir '<%= @root_dir %>/webapp'
 env PYTHONPATH='<%= @root_dir %>/lib:<%= @root_dir %>/webapp'
 env GRAPHITE_STORAGE_DIR='<%= @root_dir %>/storage'
 env GRAPHITE_CONF_DIR='<%= @root_dir %>/conf'
-exec <%= @gunicorn_bin %> -b<%= @bind_address -%>:<%= @port %> -w2 graphite/settings.py
+exec <%= @gunicorn_bin %> -b<%= @bind_address -%>:<%= @port %> -w<%= @worker_processes -%> graphite/settings.py
