Use a version of the python module that works
When running the tests. Previously, I believe the master branch of the
python module repository was being used, and that isn't compatible
with Puppet 3, leading to errors like:

  Syntax error at 'Enum'; expected ')'

--- a/.fixtures.yml
+++ b/.fixtures.yml
@@ -1,6 +1,8 @@
 fixtures:
   repositories:
     stdlib: git://github.com/puppetlabs/puppetlabs-stdlib.git
-    python: git://github.com/voxpupuli/puppet-python.git
+    python:
+      repo: git://github.com/voxpupuli/puppet-python.git
+      ref: 1.19.0
   symlinks:
     graphite: "#{source_dir}"
